views/scss/item-creator.scss
/* ... */
%add-option{
    color: $info;
    border: 1px $itemCreatorAddOptionBorderColor dashed !important;
    list-style-type: none;
    position: relative;
    cursor: pointer !important;
    border-radius: 3px;
    background-color: $itemCreatorAddOptionBgColor;
    [class^="icon-"], [class*=" icon-"] {
        @include font-size(16);
        position: relative;
        top: 1px;
        left: 2px;
        color: $info;
        padding-right: 5px
    }
    &:hover {
        opacity: .8;
    }
}

.font-selector {
    optgroup {
        font-style: normal;
        line-height: 1.5;
        font-weight: normal;
        font-size: 1.4rem;
        color: $darkBrown;
        padding: 2px;
    }
    option {
        font-size: 1.2rem;
        color: #222
    }
}

#appearance-trigger {
    .icon-item {
        display:none;
    }
}

#item-editor-widget-bar {
    display: none;
}
#panel-authoring {
    height: calc(100vh - 135px);
}
#item-editor-scope {
    height: calc(100% - 35px);
    & > nav.action-bar {
        z-index: 15;
        padding: 0;
        @include flex-container();

        .action-group {
            padding: 5px;
            position: relative;
        }
        .menu-left {
            @include simple-flex-box(195px);
            border-right: 1px solid $uiGeneralContentBorder;
        }
        .menu-right {
            @include simple-flex-box(195px);
            border-left: 1px solid $uiGeneralContentBorder;
        }
        .menu {
            @include simple-flex-box(auto);
        }
    }
}

#panel-authoring {
    height: calc(100vh - 135px);
    #item-editor-scope {
        height: 100%;
    }
}

#item-editor-wrapper {
    margin: 0;
    position: relative;
    background-color: $itemCreatorSideBarBgColor;
    height: 100%;
    @include flex-container();

    .item-editor-item {
        position : relative;
        [class*=" col-"], [class^="col-"] {
            padding: 3px; //not consistent with commonRenderer ! @todo : fix this
        }
    }

}

.item-editor-response-related {
    .response-mapping-info {
        .feedback-info {
            padding: 5px;
        }
    }
}

.item-editor-css-editor {
    select {
        min-width: 0 !important;
        width: auto !important
    }
}


// hide all sections on right sidebar
.sidebar-right-section-box {
    display: none;
}

@import "qtiCreator/_outcome-editor";
@import "qtiCreator/_interaction-sidebar";
@import "qtiCreator/_math-input";

.item-editor-sidebar-wrapper {
    background: $canvas;
    position: relative;

    @include simple-flex-box(195px);
    overflow-y: auto;
    overflow-x: hidden;

    &.left-bar {
        .item-editor-sidebar {
            border-right: 1px solid $uiGeneralContentBg;
        }
    }
    &.right-bar {
        .item-editor-sidebar {
            border-left: 1px solid $uiGeneralContentBg;
        }
    }
}
/* ... */

